--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "globby": "^5.0.0",
     "left-pad": "^1.1.0",
     "optimist": "^0.6.1",
-    "right-pad": "^1.0.0"
+    "right-pad": "^1.0.0",
+    "webpack": "^1.13.1"
   },
   "repository": {
     "type": "git",
     "url": "git@gitlab.corp.qunar.com:mfe/ykit.git"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.5.3",
+    "shelljs": "^0.7.0"
   }
 }
