--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "url": "git@gitlab.corp.qunar.com:mfe/ykit.git"
   },
   "devDependencies": {
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "mocha": "^2.5.3",
     "shelljs": "^0.7.0"
