--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "left-pad": "^1.1.0",
     "optimist": "^0.6.1",
     "right-pad": "^1.0.0",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "mocha": "^2.5.3",
+    "pm2": "^1.1.3",
     "shelljs": "^0.7.0"
   }
 }
