--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "license": "MIT",
   "dependencies": {
     "colors": "^1.1.2",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "globby": "^5.0.0",
     "left-pad": "^1.1.0",
     "optimist": "^0.6.1",
     "right-pad": "^1.0.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
