--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "left-pad": "^1.1.0",
     "optimist": "^0.6.1",
     "right-pad": "^1.0.0",
+    "underscore": "^1.8.3",
     "webpack": "^1.13.1"
   },
   "repository": {
