--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "MIT",
   "dependencies": {
     "colors": "^1.1.2",
+    "connect": "^3.4.1",
     "globby": "^5.0.0",
     "left-pad": "^1.1.0",
     "optimist": "^0.6.1",
     "right-pad": "^1.0.0",
     "underscore": "^1.8.3",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1"
   },
   "repository": {
     "type": "git",
