--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "left-pad": "^1.1.0",
     "optimist": "^0.6.1",
     "right-pad": "^1.0.0",
+    "serve-index": "^1.8.0",
+    "serve-static": "^1.11.1",
     "underscore": "^1.8.3",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1"
