--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "globby": "^5.0.0",
     "html-loader": "^0.4.3",
     "json-loader": "^0.5.4",
+    "json5": "^0.5.0",
     "left-pad": "^1.1.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
