--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "colors": "^1.1.2",
     "connect": "^3.4.1",
     "css-loader": "^0.23.1",
+    "eslint": "^3.0.0",
+    "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "globby": "^5.0.0",
     "html-loader": "^0.4.3",
+    "inquirer": "^1.1.1",
     "json-loader": "^0.5.4",
     "left-pad": "^1.1.0",
     "less": "^2.7.1",
