--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "connect": "^3.4.1",
     "css-loader": "^0.23.1",
     "eslint": "^3.0.0",
-    "eslint-plugin-react": "^5.2.2",
+    "extend": "^3.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "globby": "^5.0.0",
     "html-loader": "^0.4.3",
@@ -27,12 +27,10 @@
     "less-loader": "^2.2.3",
     "loader-utils": "^0.2.15",
     "optimist": "^0.6.1",
-    "replacestream": "^4.0.0",
     "right-pad": "^1.0.0",
     "serve-index": "^1.8.0",
     "serve-static": "^1.11.1",
     "style-loader": "^0.13.1",
-    "underscore": "^1.8.3",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1"
   },
