--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "globby": "^5.0.0",
     "html-loader": "^0.4.3",
+    "ignore": "^3.1.3",
     "inquirer": "^1.1.1",
     "json-loader": "^0.5.4",
     "json5": "^0.5.0",
