--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "loader-utils": "^0.2.15",
+    "moment": "^2.14.1",
     "optimist": "^0.6.1",
     "right-pad": "^1.0.0",
     "serve-index": "^1.8.0",
