--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "async": "^1.5.2",
     "colors": "^1.1.2",
     "connect": "^3.4.1",
     "connect-livereload": "^0.5.4",
     "css-loader": "^0.23.1",
-    "csslint": "^0.10.0",
-    "csslint-stylish": "0.0.4",
     "eslint": "^3.0.0",
     "extend": "^3.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -24,6 +23,7 @@
     "html-loader": "^0.4.3",
     "ignore": "^3.1.3",
     "inquirer": "^1.1.1",
+    "js-yaml": "^3.6.1",
     "json-loader": "^0.5.4",
     "json5": "^0.5.0",
     "left-pad": "^1.1.0",
@@ -34,10 +34,12 @@
     "moment": "^2.14.1",
     "optimist": "^0.6.1",
     "progress-bar-webpack-plugin": "^1.8.0",
+    "require-uncached": "^1.0.2",
     "right-pad": "^1.0.0",
     "serve-index": "^1.8.0",
     "serve-static": "^1.11.1",
     "style-loader": "^0.13.1",
+    "stylelint": "^6.9.0",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1"
   },
