--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@qnpm/ykit",
-  "version": "0.0.3",
+  "version": "0.0.2",
   "description": "高可用高扩展前端开发工具",
   "main": "src/ykit.js",
   "bin": {
     "ykit": "bin/ykit"
   },
   "engines": {
-    "node": ">=4"
+    "node": ">=0.12"
   },
   "license": "MIT",
   "dependencies": {
@@ -16,7 +16,7 @@
     "connect": "^3.4.1",
     "connect-livereload": "^0.5.4",
     "css-loader": "^0.23.1",
-    "eslint": "^3.0.0",
+    "eslint": "^2.13.1",
     "extend": "^3.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "globby": "^5.0.0",
@@ -48,5 +48,11 @@
   "repository": {
     "type": "git",
     "url": "git@gitlab.corp.qunar.com:mfe/ykit.git"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-watch": "^4.3.8"
   }
 }
