--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@qnpm/jerryproxy-ykit": "^1.0.3",
     "async": "^1.5.2",
     "colors": "^1.1.2",
     "connect": "^3.4.1",
