--- a/package.json
+++ b/package.json
@@ -22,22 +22,22 @@
     "globby": "^5.0.0",
     "html-loader": "^0.4.3",
     "inquirer": "^1.1.1",
-    "jerryproxy-ykit": "^1.0.42",
+    "jerryproxy-ykit": "^1.0.55",
     "js-yaml": "^3.6.1",
     "json-loader": "^0.5.4",
     "json5": "^0.5.0",
     "left-pad": "^1.1.0",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
     "livereload": "^0.4.1",
     "loader-utils": "^0.2.15",
     "mkdirp": "^0.5.1",
     "moment": "^2.14.1",
     "optimist": "^0.6.1",
     "replacestream": "^4.0.0",
+    "request": "^2.75.0",
     "require-uncached": "^1.0.2",
     "requireg": "^0.1.5",
     "right-pad": "^1.0.0",
+    "semver": "^5.3.0",
     "serve-index": "^1.8.0",
     "serve-static": "^1.11.1",
     "style-loader": "^0.13.1",
