--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@qnpm/ykit",
+  "name": "ykit",
+  "scope": "@qnpm",
   "version": "0.1.3",
   "description": "高可用高扩展前端开发工具",
   "main": "src/ykit.js",
@@ -15,7 +16,6 @@
     "colors": "^1.1.2",
     "connect": "^3.4.1",
     "css-loader": "^0.23.1",
-    "eslint": "^2.13.1",
     "extend": "^3.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "globby": "^5.0.0",
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
+    "eslint": "^2.13.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-watch": "^4.3.8"
