--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "engines": {
     "node": ">=0.12"
   },
+  "scripts":{
+    "test": "mocha --recursive --compilers js:babel-core/register"
+  },
   "license": "MIT",
   "dependencies": {
     "async": "^1.5.2",
@@ -50,9 +53,11 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
+    "chai": "^3.5.0",
     "eslint": "^2.13.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-watch": "^4.3.8"
+    "gulp-watch": "^4.3.8",
+    "mocha": "^3.1.2"
   }
 }
