--- a/test/utils/source/file.yaml
+++ b/test/utils/source/file.yaml
@@ -1,10 +1,8 @@
 env:
-  node: true
+  browser: true
   commonjs: true
   es6: true
 extends: 'eslint:recommended'
-parserOptions:
-  sourceType: module
 rules:
   indent:
     - error
@@ -18,13 +16,3 @@ rules:
   semi:
     - error
     - always
-globals:
-  log: true
-  error: true
-  success: true
-  warn: true
-  info: true
-  process: true
-  it: true
-  describe: true
-  
