--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "ykit",
-  "scope": "@qnpm",
-  "version": "0.1.4",
+  "name": "@qnpm/ykit",
+  "version": "0.1.5-rc6",
   "description": "高可用高扩展前端开发工具",
   "main": "src/ykit.js",
   "bin": {
