--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "engines": {
     "node": ">=0.12"
   },
-  "scripts":{
+  "scripts": {
     "test": "mocha --recursive --compilers js:babel-core/register"
   },
   "license": "MIT",
@@ -44,7 +44,8 @@
     "stylelint": "^6.9.0",
     "through2": "^2.0.1",
     "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1"
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-md5-hash": "0.0.5"
   },
   "repository": {
     "type": "git",
