--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qnpm/ykit",
-  "version": "0.1.5-rc6",
+  "version": "0.1.5",
   "description": "高可用高扩展前端开发工具",
   "main": "src/ykit.js",
   "bin": {
