--- a/package.json
+++ b/package.json
@@ -56,33 +56,35 @@
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "eslint": "^2.13.1",
+    "findup": "^0.1.5",
     "ghooks": "^1.3.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-watch": "^4.3.8",
-    "mocha": "^3.1.2"
-},
-"config": {
-  "ghooks": {
-    "commit-msg": "node ./validate-commit-msg.js"
+    "mocha": "^3.1.2",
+    "semver-regex": "^1.0.0"
   },
-  "validate-commit-msg": {
-    "types": [
-      "feat",
-      "fix",
-      "docs",
-      "style",
-      "refactor",
-      "perf",
-      "test",
-      "chore",
-      "revert"
-    ],
-    "warnOnFail": false,
-    "maxSubjectLength": 100,
-    "subjectPattern": ".+",
-    "subjectPatternErrorMsg": "subject does not match111 subject pattern!",
-    "helpMessage": ""
+  "config": {
+    "ghooks": {
+      "commit-msg": "node ./validate-commit-msg.js"
+    },
+    "validate-commit-msg": {
+      "types": [
+        "feat",
+        "fix",
+        "docs",
+        "style",
+        "refactor",
+        "perf",
+        "test",
+        "chore",
+        "revert"
+      ],
+      "warnOnFail": false,
+      "maxSubjectLength": 100,
+      "subjectPattern": ".+",
+      "subjectPatternErrorMsg": "subject does not match111 subject pattern!",
+      "helpMessage": ""
+    }
   }
-}
 }
