chore: add pre-commit eslint

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   },
   "config": {
     "ghooks": {
+      "pre-commit": "eslint ./src",
       "commit-msg": "node ./validate-commit-msg.js"
     },
     "validate-commit-msg": {
