feat(server): 采用新的 logger 风格

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -39,6 +39,7 @@ globals:
   extend: true
   yaml: true
   requireUncached: true
+  spinner: true
   mkdirp: true
   JSON5: true
   YKIT_COMMANDS_PATH: true
