--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qnpm/ykit",
-  "version": "0.1.6-rc5",
+  "version": "0.1.6",
   "description": "高可用高扩展前端开发工具",
   "main": "src/ykit.js",
   "bin": {
