fix: 修复 ora 不支持 node 0.12

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "license": "MIT",
   "dependencies": {
     "async": "^1.5.2",
+    "chalk": "^1.1.3",
+    "cli-cursor": "^1.0.2",
+    "cli-spinners": "^0.3.0",
     "colors": "^1.1.2",
     "connect": "^3.4.1",
     "css-loader": "^0.23.1",
@@ -31,10 +34,10 @@
     "json5": "^0.5.0",
     "left-pad": "^1.1.3",
     "loader-utils": "^0.2.15",
+    "log-symbols": "^1.0.2",
     "mkdirp": "^0.5.1",
     "moment": "^2.14.1",
     "optimist": "^0.6.1",
-    "ora": "^0.3.0",
     "replacestream": "^4.0.0",
     "request": "^2.75.0",
     "require-uncached": "^1.0.2",
