feat(pack): 使用 uglify 进行压缩 (+1 squashed commit) Squashed commits: [76d15fb] feat(pack): 使用 uglify 进行压缩

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -40,6 +40,7 @@ globals:
   yaml: true
   requireUncached: true
   spinner: true
+  logTime: true
   mkdirp: true
   JSON5: true
   YKIT_COMMANDS_PATH: true
