--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cli-cursor": "^1.0.2",
     "cli-spinners": "^0.3.0",
     "colors": "^1.1.2",
+    "compute-cluster": "0.0.9",
     "connect": "^3.4.1",
     "css-loader": "^0.23.1",
     "extend": "^3.0.0",
@@ -48,6 +49,8 @@
     "serve-static": "^1.11.1",
     "style-loader": "^0.13.1",
     "through2": "^2.0.1",
+    "uglify-js": "^1.3.5",
+    "uglifycss": "0.0.25",
     "webpack": "^1.13.1",
     "webpack-md5-hash": "0.0.5"
   },
