--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
     "through2": "^2.0.1",
     "uglify-js": "^1.3.5",
     "uglifycss": "0.0.25",
-    "webpack": "^1.13.1",
-    "webpack-md5-hash": "0.0.5"
+    "webpack": "^1.13.1"
   },
   "repository": {
     "type": "http",
