--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^0.23.1",
     "extend": "^3.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fs-extra": "^1.0.0",
     "globby": "^5.0.0",
     "html-loader": "^0.4.3",
     "jerryproxy": "^1.0.68",
@@ -47,6 +48,7 @@
     "semver": "^5.3.0",
     "serve-index": "^1.8.0",
     "serve-static": "^1.11.1",
+    "shelljs": "^0.7.5",
     "style-loader": "^0.13.1",
     "through2": "^2.0.1",
     "uglify-js": "^1.3.5",
@@ -70,7 +72,6 @@
     "mocha": "^3.1.2",
     "ps-tree": "^1.1.0",
     "semver-regex": "^1.0.0",
-    "shelljs": "^0.7.5",
     "ydoc": "^2.1.1"
   },
   "config": {
