--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "compute-cluster": "0.0.9",
     "connect": "^3.4.1",
     "css-loader": "^0.23.1",
+    "eslint": "2.13.1",
     "extend": "^3.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "fs-extra": "^1.0.0",
@@ -63,7 +64,6 @@
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "conventional-changelog-cli": "^1.2.0",
-    "eslint": "^2.13.1",
     "findup": "^0.1.5",
     "ghooks": "^1.3.2",
     "gulp": "^3.9.1",
