style: 更改 eslint 规则

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,6 +18,10 @@ rules:
   semi:
     - error
     - always
+  no-unused-vars:
+    - off
+  no-inner-declarations:
+    - off
 globals:
   log: true
   error: true
