--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "2.13.1",
     "extend": "^3.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "force-case-sensitivity-webpack-plugin": "^0.2.1",
     "fs-extra": "^1.0.0",
     "globby": "^5.0.0",
     "html-loader": "^0.4.3",
