--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "conventional-changelog-cli": "^1.2.0",
+    "debug": "^2.6.0",
     "findup": "^0.1.5",
     "ghooks": "^1.3.2",
     "gulp": "^3.9.1",
