--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "mocha": "^3.1.2",
     "ps-tree": "^1.1.0",
     "semver-regex": "^1.0.0",
-    "ydoc": "^2.1.1"
+    "ydoc": "latest"
   },
   "config": {
     "ghooks": {
