--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "url": "http://gitlab.corp.qunar.com/mfe/ykit.git"
   },
   "devDependencies": {
-    "@qnpm/ykit-config-qunar": "git+ssh://git@gitlab.corp.qunar.com/mfe/ykit-config-qunar.git",
     "@qnpm/ykit-config-fekit": "git+ssh://git@gitlab.corp.qunar.com/mfe/ykit-config-fekit.git#dev",
+    "@qnpm/ykit-config-qunar": "git+ssh://git@gitlab.corp.qunar.com/mfe/ykit-config-qunar.git",
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "conventional-changelog-cli": "^1.2.0",
@@ -77,7 +77,7 @@
     "mocha": "^3.1.2",
     "ps-tree": "^1.1.0",
     "semver-regex": "^1.0.0",
-    "ydoc": "latest",
+    "ydoc": "2.2.1",
     "ykit-config-yo": "git+ssh://git@gitlab.corp.qunar.com/mfe/ykit-config-yo.git#dev-v1.2.0"
   },
   "config": {
