--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "mocha": "^3.1.2",
     "ps-tree": "^1.1.0",
     "semver-regex": "^1.0.0",
-    "ydoc": "2.2.1",
+    "ydoc": "3.0.0-beta3",
     "ykit-config-yo": "git+ssh://git@gitlab.corp.qunar.com/mfe/ykit-config-yo.git#dev-v1.2.0"
   },
   "config": {
