--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "through2": "^2.0.1",
     "uglify-js": "^1.3.5",
     "uglifycss": "0.0.25",
-    "webpack": "^1.13.1",
-    "webpack-dev-middleware": "1.9.0"
+    "webpack": "1.14.0",
+    "webpack-dev-middleware": "1.9.0",
   },
   "repository": {
     "type": "http",
