--- a/package.json
+++ b/package.json
@@ -64,8 +64,6 @@
     "url": "http://gitlab.corp.qunar.com/mfe/ykit.git"
   },
   "devDependencies": {
-    "@qnpm/ykit-config-fekit": "git+ssh://git@gitlab.corp.qunar.com/mfe/ykit-config-fekit.git#dev",
-    "@qnpm/ykit-config-qunar": "git+ssh://git@gitlab.corp.qunar.com/mfe/ykit-config-qunar.git",
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "conventional-changelog-cli": "^1.2.0",
@@ -77,10 +75,7 @@
     "gulp-watch": "^4.3.8",
     "mocha": "^3.1.2",
     "ps-tree": "^1.1.0",
-    "semver-regex": "^1.0.0",
-    "ydoc": "3.0.0-beta3",
-    "ykit-config-react": "git+ssh://git@gitlab.corp.qunar.com/mfe/ykit-config-react.git",
-    "ykit-config-yo": "git+ssh://git@gitlab.corp.qunar.com/mfe/ykit-config-yo.git#dev"
+    "semver-regex": "^1.0.0"
   },
   "config": {
     "ghooks": {
