--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "uglifycss": "0.0.25",
     "webpack": "1.14.0",
     "webpack-dev-middleware": "1.9.0",
-    "webpack-encoding-plugin-quiet": "^0.2.1"
+    "webpack-encoding-plugin-quiet": "^0.2.1",
+    "webpack-hot-middleware": "^2.17.0"
   },
   "repository": {
     "type": "http",
