--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "shelljs": "^0.7.5",
     "style-loader": "^0.13.1",
     "through2": "^2.0.1",
-    "uglify-js": "^1.3.5",
+    "uglify-js": "2.7.5",
     "uglifycss": "0.0.25",
     "webpack": "1.14.0",
     "webpack-dev-middleware": "1.9.0",
