--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "fs-extra": "^1.0.0",
     "globby": "^5.0.0",
     "html-loader": "^0.4.3",
-    "jerryproxy": "^1.0.68",
+    "jerryproxy": "1.0.91",
     "js-yaml": "^3.6.1",
     "json-loader": "^0.5.4",
     "json5": "^0.5.0",
