--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "serve-index": "^1.8.0",
     "serve-static": "^1.11.1",
     "shelljs": "^0.7.5",
+    "socket.io": "1.7.3",
     "style-loader": "^0.13.1",
     "through2": "^2.0.1",
     "uglify-js": "2.7.5",
