--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ykit",
-  "version": "0.3.3",
+  "name": "@qnpm/ykit",
+  "version": "0.4.0-rc0",
   "description": "高可用高扩展前端开发工具",
   "main": "src/ykit.js",
   "bin": {
