--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "requireg": "^0.1.5",
     "right-pad": "^1.0.1",
     "semver": "^5.3.0",
+    "serve-favicon": "^2.4.2",
     "serve-index": "^1.8.0",
     "serve-static": "^1.11.1",
     "shelljs": "^0.7.5",
