--- a/static/initTmpl/package.json
+++ b/static/initTmpl/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "#_name",
+  "name": "@PROJECT_NAME",
   "version": "1.0.0",
-  "description": "",
+  "description": "ykit starter",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
