chore: rearrage dirs

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "高可用高扩展前端开发工具",
   "main": "src/ykit.js",
   "bin": {
-    "ykit": "bin/ykit"
+    "ykit": "static/bin/ykit"
   },
   "engines": {
     "node": ">=0.12"
@@ -12,8 +12,7 @@
   "scripts": {
     "test": "mocha --recursive --timeout 0",
     "start": "cd .. && sudo node ykit/bin/ykit server",
-    "doc": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && ydoc build && node tasks/post-process-doc.js",
-    "release": "tasks/release.sh"
+    "doc": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && ydoc build && node static/tasks/post-process-doc.js"
   },
   "license": "MIT",
   "dependencies": {
@@ -80,8 +79,8 @@
   },
   "config": {
     "ghooks": {
-      "pre-commit": "eslint ./src",
-      "commit-msg": "node ./tasks/validate-commit-msg.js"
+      "pre-commit": "eslint src",
+      "commit-msg": "node static/tasks/validate-commit-msg.js"
     },
     "validate-commit-msg": {
       "types": [
