--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@qnpm/ykit",
-  "version": "0.4.0-rc0",
+  "version": "0.4.0-rc1",
   "description": "高可用高扩展前端开发工具",
   "main": "src/ykit.js",
   "bin": {
-    "ykit": "static/bin/ykit"
+    "ykit": "bin/ykit"
   },
   "engines": {
     "node": ">=0.12"
