--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ykit",
-  "version": "0.3.4",
+  "name": "@qnpm/ykit",
+  "version": "2.0.0-rc0",
   "description": "高可用高扩展前端开发工具",
   "main": "src/ykit.js",
   "bin": {
@@ -12,8 +12,7 @@
   "scripts": {
     "test": "mocha --recursive --timeout 0",
     "start": "cd .. && sudo node ykit/bin/ykit server",
-    "doc": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && ydoc build && node tasks/post-process-doc.js",
-    "release": "tasks/release.sh"
+    "doc": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && ydoc build && node static/tasks/post-process-doc.js"
   },
   "license": "MIT",
   "dependencies": {
@@ -28,7 +27,7 @@
     "css-loader": "^0.23.1",
     "eslint": "2.13.1",
     "extend": "^3.0.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "fs-extra": "^1.0.0",
     "globby": "^5.0.0",
     "html-loader": "^0.4.3",
@@ -47,14 +46,16 @@
     "requireg": "^0.1.5",
     "right-pad": "^1.0.1",
     "semver": "^5.3.0",
+    "serve-favicon": "^2.4.2",
     "serve-index": "^1.8.0",
     "serve-static": "^1.11.1",
     "shelljs": "^0.7.5",
+    "socket.io": "1.7.3",
     "style-loader": "^0.13.1",
     "through2": "^2.0.1",
-    "uglify-js": "1.3.5",
+    "uglify-js": "2.7.5",
     "uglifycss": "0.0.25",
-    "webpack": "1.14.0",
+    "webpack": "^2.3.2",
     "webpack-dev-middleware": "1.9.0",
     "webpack-hot-middleware": "^2.17.0"
   },
@@ -68,7 +69,7 @@
     "conventional-changelog-cli": "^1.2.0",
     "debug": "^2.6.0",
     "findup": "^0.1.5",
-    "ghooks": "^1.3.2",
+    "ghooks": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-watch": "^4.3.8",
@@ -78,8 +79,8 @@
   },
   "config": {
     "ghooks": {
-      "pre-commit": "eslint ./src",
-      "commit-msg": "node ./tasks/validate-commit-msg.js"
+      "pre-commit": "eslint src",
+      "commit-msg": "node static/tasks/validate-commit-msg.js"
     },
     "validate-commit-msg": {
       "types": [
