test: add app test

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "test": "mocha --recursive --timeout 0",
+    "testlocal": "env ENV=local mocha --recursive --timeout 0",
     "start": "cd .. && sudo node ykit/bin/ykit server",
     "doc": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && ydoc build && node static/tasks/post-process-doc.js"
   },
