--- a/package.json
+++ b/package.json
@@ -66,7 +66,11 @@
     "url": "https://github.com/YMFE/ykit.git"
   },
   "devDependencies": {
+    "babel-eslint": "6",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-runtime": "^6.23.0",
     "chai": "^3.5.0",
     "conventional-changelog-cli": "^1.2.0",
     "debug": "^2.6.0",
