--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-loader": "^0.4.3",
     "http-proxy-middleware": "^0.17.4",
     "jerryproxy": "1.0.91",
+    "js-beautify": "^1.6.12",
     "js-yaml": "^3.6.1",
     "json-loader": "^0.5.4",
     "json5": "^0.5.0",
