--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "loader-utils": "^0.2.15",
     "log-symbols": "^1.0.2",
     "mkdirp": "^0.5.1",
+    "mockjs": "^1.0.1-beta3",
     "moment": "^2.14.1",
     "optimist": "^0.6.1",
     "replacestream": "^4.0.0",
