--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@qnpm/ykit",
+  "name": "ykit",
   "version": "0.5.0-rc0",
   "description": "高可用高扩展前端开发工具",
   "main": "src/ykit.js",
