feat(cli): add watch command

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -50,6 +50,7 @@ globals:
   logInfo: true
   logDoc: true
   logMock: true
+  logPlain: true
   JSON5: true
   YKIT_COMMANDS_PATH: true
   YKIT_RC: true
