--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "uglify-js": "2.7.5",
     "uglifycss": "0.0.25",
     "webpack": "^3.4.1",
-    "webpack-dev-middleware": "1.9.0",
+    "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.17.0"
   },
   "repository": {
