--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   "license": "MIT",
   "dependencies": {
     "async": "^1.5.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "case-sensitive-paths-webpack-plugin": "^2.0.0",
     "chalk": "^1.1.3",
@@ -32,6 +38,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "fs-extra": "^1.0.0",
     "globby": "^5.0.0",
+    "happypack": "^4.0.0-beta.2",
     "html-loader": "^0.4.3",
     "http-proxy-middleware": "^0.17.4",
     "jerryproxy-ykit": "^1.1.1",
@@ -59,7 +66,7 @@
     "through2": "^2.0.1",
     "uglify-js": "2.7.5",
     "uglifycss": "0.0.25",
-    "webpack": "^3.4.1",
+    "webpack": "^3.5.4",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.17.0"
   },
@@ -70,7 +77,6 @@
   "devDependencies": {
     "babel-eslint": "6",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2017": "^6.24.1",
     "chai": "^3.5.0",
     "conventional-changelog-cli": "^1.2.0",
