--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
     "case-sensitive-paths-webpack-plugin": "^2.0.0",
     "chalk": "^1.1.3",
     "cli-cursor": "^1.0.2",
@@ -61,7 +58,6 @@
     "serve-index": "^1.8.0",
     "serve-static": "^1.11.1",
     "shelljs": "^0.7.5",
-    "socket.io": "1.7.3",
     "style-loader": "^0.13.1",
     "through2": "^2.0.1",
     "uglify-js": "2.7.5",
@@ -77,7 +73,9 @@
   "devDependencies": {
     "babel-eslint": "6",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
+    "babel-runtime": "^6.23.0",
     "chai": "^3.5.0",
     "conventional-changelog-cli": "^1.2.0",
     "debug": "^2.6.0",
