--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "compute-cluster": "0.0.9",
     "connect": "^3.4.1",
     "css-loader": "^0.23.1",
-    "eslint": "2.13.1",
     "extend": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "fs-extra": "^1.0.0",
@@ -79,6 +78,7 @@
     "chai": "^3.5.0",
     "conventional-changelog-cli": "^1.2.0",
     "debug": "^2.6.0",
+    "eslint": "^4.4.1",
     "findup": "^0.1.5",
     "ghooks": "^2.0.0",
     "gulp": "^3.9.1",
