--- a/circle.yml
+++ b/circle.yml
@@ -7,13 +7,8 @@ jobs:
     steps:
       - checkout
       - run:
-          name: update-npm
-          command: 'sudo npm install -g npm@latest'
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-      - run:
-          name: install-npm-wee
-          command: npm install
+          name: install-npm
+          command: yarn install --no-lockfile
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
