--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "2.13.1",
     "extend": "^3.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin-ignore-order": "^1.1.1",
     "fs-extra": "^1.0.0",
     "globby": "^5.0.0",
     "html-loader": "^0.4.3",
