--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ykit",
-  "version": "0.7.0",
+  "version": "0.8.0-rc.0",
   "description": "高可用高扩展前端开发工具",
   "main": "src/ykit.js",
   "bin": {
