--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "shelljs": "^0.7.8",
     "style-loader": "^0.13.1",
     "through2": "^2.0.1",
-    "uglify-js": "1.3.5",
+    "uglify-js": "^3.1.9",
     "uglifycss": "0.0.25",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
