--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "fs-extra": "^1.0.0",
     "globby": "^5.0.0",
-    "happypack": "^4.0.0-beta.2",
+    "happypack": "^4.0.0",
     "html-loader": "^0.4.3",
     "http-proxy-middleware": "^0.17.4",
     "js-beautify": "^1.6.12",
