--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "ykit2",
-  "version": "2.0.0-beta.0",
+  "name": "ykit",
+  "version": "2.0.0-beta.1",
   "description": "高可用高扩展前端开发工具",
   "main": "src/ykit.js",
   "bin": {
-    "ykit2": "bin/ykit",
-    "y2": "bin/ykit"
+    "ykit": "bin/ykit"
   },
   "engines": {
     "node": ">=4.3.0 <5.0.0 || >=5.10"
