--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ykit",
   "version": "2.0.0-beta.1",
-  "description": "高可用高扩展前端开发工具",
+  "description": "现代 JavaScript 应用构建工具",
   "main": "src/ykit.js",
   "bin": {
     "ykit": "bin/ykit"
