fix: 修复 build 时未输出正确的版本信息

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -51,6 +51,7 @@ globals:
   logDoc: true
   logMock: true
   logPlain: true
+  ykitVer: true
   JSON5: true
   YKIT_COMMANDS_PATH: true
   YKIT_RC: true
