--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "node": ">=4.3.0 <5.0.0 || >=5.10"
   },
   "scripts": {
+    "pre-commit": "eslint src",
+    "commit-msg": "node static/tasks/validate-commit-msg.js",
     "test": "mocha --recursive --timeout 0",
     "testlocal": "env ENV=local mocha --recursive --timeout 0",
     "start": "cd .. && sudo node ykit/bin/ykit server",
@@ -71,19 +73,15 @@
     "debug": "^2.6.0",
     "eslint": "^4.4.1",
     "findup": "^0.1.5",
-    "ghooks": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-watch": "^4.3.8",
+    "husky": "^0.14.3",
     "mocha": "^3.1.2",
     "ps-tree": "^1.1.0",
     "semver-regex": "^1.0.0"
   },
   "config": {
-    "ghooks": {
-      "pre-commit": "eslint src",
-      "commit-msg": "node static/tasks/validate-commit-msg.js"
-    },
     "validate-commit-msg": {
       "types": [
         "feat",
