--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ykit",
-  "version": "2.2.0-rc.1",
+  "version": "2.2.0",
   "description": "现代 JavaScript 应用构建工具",
   "bin": {
     "ykit": "bin/ykit"
