--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "log-symbols": "^2.0.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.14.1",
+    "node-fs-extra": "^0.8.2",
     "optimist": "^0.6.1",
     "replacestream": "^4.0.0",
     "requireg": "^0.1.5",
