--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cli-cursor": "^1.0.2",
     "cli-spinners": "^0.3.0",
     "colors": "^1.1.2",
+    "compression": "^1.7.2",
     "compute-cluster": "0.0.9",
     "connect": "^3.4.1",
     "css-loader": "^0.23.1",
