--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "css-loader": "^0.23.1",
     "eslint": "2.13.1",
     "extend": "^3.0.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "fs-extra": "^1.0.0",
     "globby": "^5.0.0",
     "html-loader": "^0.4.3",
@@ -60,9 +60,9 @@
     "through2": "^2.0.1",
     "uglify-js": "1.3.5",
     "uglifycss": "0.0.25",
-    "webpack": "1.14.0",
-    "webpack-dev-middleware": "1.9.0",
-    "webpack-hot-middleware": "^2.17.0"
+    "webpack": "^4.43.0",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "repository": {
     "type": "https",
