--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "css-loader": "^0.23.1",
     "eslint": "2.13.1",
     "extend": "^3.0.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "fs-extra": "^1.0.0",
     "globby": "^5.0.0",
     "html-loader": "^0.4.3",
@@ -43,6 +42,7 @@
     "left-pad": "^1.1.3",
     "loader-utils": "^0.2.15",
     "log-symbols": "^1.0.2",
+    "mini-css-extract-plugin": "^0.9.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.14.1",
     "optimist": "^0.6.1",
@@ -76,6 +76,7 @@
     "chai": "^3.5.0",
     "conventional-changelog-cli": "^1.2.0",
     "debug": "^2.6.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "findup": "^0.1.5",
     "ghooks": "^1.3.2",
     "gulp": "^3.9.1",
